--- a/server/templates/repositories.html
+++ b/server/templates/repositories.html
@@ -44,7 +44,7 @@
 
     <div class="footer">
         <p>Made with <code><3</code> by <a href="https://github.com/jessfraz">@jessfraz</a></p>
-        <p>Checkout the source code at: <a href="https://github.com/genuinetools/reg">github.com/genuinetools/reg</a></p>
+        <p>Checkout the source code at: <a href="https://github.com/sivabharathwaajss/reg">github.com/sivabharathwaajss/reg</a></p>
         <p>Last Updated: {{ .LastUpdated }}</p>
         <p>Update Interval:  {{ .UpdateInterval }}</p>
     </div><!--/.footer-->
