--- a/server/templates/tags.html
+++ b/server/templates/tags.html
@@ -51,7 +51,7 @@
 
     <div class="footer">
         <p>Made with <code><3</code> by <a href="https://github.com/jessfraz">@jessfraz</a></p>
-        <p>Checkout the source code at: <a href="https://github.com/genuinetools/reg">github.com/genuinetools/reg</a></p>
+        <p>Checkout the source code at: <a href="https://github.com/sivabharathwaajss/reg">github.com/sivabharathwaajss/reg</a></p>
         <p>Last Updated: {{ .LastUpdated }}</p>
     </div><!--/.footer-->
     <script src="/static/js/scripts.js"></script>
