--- a/server/templates/vulns.html
+++ b/server/templates/vulns.html
@@ -65,7 +65,7 @@
 
         <footer class="text-center">
             <p>Made with <code><3</code> by <a href="https://github.com/jessfraz">@jessfraz</a></p>
-            <p>Checkout the source code at: <a href="https://github.com/genuinetools/reg">github.com/genuinetools/reg</a></p>
+            <p>Checkout the source code at: <a href="https://github.com/sivabharathwaajss/reg">github.com/sivabharathwaajss/reg</a></p>
         </footer>
     </div>
 </body>
